--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.jsoup:jsoup:1.17.2'
     implementation 'org.projectlombok:lombok:1.18.34'
     //implementation 'org.liquibase:liquibase-core:4.29.0'
     implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
